# nnpp

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  download.sh  main.cpp  matrix.cpp  matrix.h  matrix.hpp  mnist.cpp  mnist.h  mnist.hpp  readme.md  shell.nix
nix/: structopt.nix
test/: matrix.cpp
